Update Advanced Regression analysis.ipynb

--- a/Advanced Regression analysis.ipynb
+++ b/Advanced Regression analysis.ipynb
@@ -1169,7 +1169,8 @@
     "The score is 89.6% !\n",
     "! Just adding a single categorical feature increased the score by 3% !! \n",
     "\n",
-    "Now the question is, how I assigned the numerical values to the categorical values Lvl,Bnk,HLS,Low ? "
+    "Now the question is, how I assigned the numerical values to the categorical values Lvl,Bnk,HLS,Low ? \n",
+    "Let's look at the code: https://github.com/SourinDeyUW/Advanced-Regression/blob/master/boxplot%20analysis.ipynb"
    ]
   }
  ],
