--- a/boxplot analysis.ipynb
+++ b/boxplot analysis.ipynb
@@ -64,7 +64,8 @@
     "How?<br>\n",
     "Look at the distribution for all of them. <br>\n",
     "Rank them based on their median. Then HLS=4, Low=3, Lvl=2, Bnk=1.\n",
-    "<"
+    "<br>\n",
+    "In this way, we can interpret the cateogrical features into numerical equivalent and make them ready for regression works."
    ]
   },
   {
