--- a/Advanced Regression analysis.ipynb
+++ b/Advanced Regression analysis.ipynb
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +972,7 @@
     "    import statsmodels.api as sm\n",
     "\n",
     "\n",
-    "    #df_num.drop('SalePrice',axis=1,inplace=True)\n",
+    "    df_num.drop('SalePrice',axis=1,inplace=True)\n",
     "\n",
     "    X_1 = sm.add_constant(df_num)\n",
     "    #Fitting sm.OLS model\n",
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1052,17 +1052,17 @@
      "output_type": "stream",
      "text": [
       "The selected features are:\n",
-      "['MSSubClass', 'LotArea', 'OverallQual', 'OverallCond', 'YearBuilt', 'YearRemodAdd', 'MasVnrArea', 'BsmtFinSF1', 'TotalBsmtSF', 'GrLivArea', 'BsmtFullBath', 'BedroomAbvGr', 'KitchenAbvGr', 'TotRmsAbvGrd', 'Fireplaces', 'GarageCars', 'WoodDeckSF', 'ScreenPorch', 'LandContour']\n",
-      "Mean squared error: 554329220.81\n"
+      "['MSSubClass', 'LotArea', 'OverallQual', 'OverallCond', 'YearBuilt', 'YearRemodAdd', 'MasVnrArea', 'BsmtFinSF1', 'TotalBsmtSF', 'GrLivArea', 'BsmtFullBath', 'FullBath', 'BedroomAbvGr', 'KitchenAbvGr', 'TotRmsAbvGrd', 'Fireplaces', 'GarageCars', 'WoodDeckSF', 'ScreenPorch']\n",
+      "Mean squared error: 739713709.92\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.8960459586862444"
+       "0.8612805771825941"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
